--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   </head>
   <body>
     <header>
-      <a href="https://ppylypiuk.github.io/goit-markup-hw-01/" target="_self"
-        ><img src="/img/logo.svg"</a
-      >
+      <a href="http://127.0.0.1:5500/index.html" target="_self"
+        ><img src="/img/logo.svg" alt="logo"
+      /></a>
       <a href="" target="_self"><strong>Studio</strong></a>
       <a href="" target="_self"><strong>Portfolio</strong></a>
       <a href="" target="_self"><strong>Contacts</strong></a>
@@ -19,4 +19,62 @@
     <main></main>
     <footer></footer>
   </body>
+  <main>
+    <section>
+      <h1>Effective Solutions for Your Business</h1>
+      <button type="button">Order Service</button>
+    </section>
+    <section>
+      <h3>Strategy</h3>
+      <p>
+        Our goal is to identify the business problem to walk away with the
+        perfect and creative solution.
+      </p>
+      <h3>Punctuality</h3>
+      <p>
+        Bring the key message to the brand's audience for the best price within
+        the shortest possible time.
+      </p>
+      <h3>Diligence</h3>
+      <p>
+        Research and confirm brands that present the strongest digital growth
+        opportunities and minimize risk.
+      </p>
+      <h3>Technologies</h3>
+      <p>
+        Design practice focused on digital experiences. We bring forth a deep
+        passion for problem-solving.
+      </p>
+    </section>
+    <section>
+      <h2>What are we doing</h2>
+      <img src="/img/img1.jpg" alt="web pages" />
+      <img src="/img/img2.jpg" alt="mobile apps" />
+      <img src="/img/img3.jpg" ald="device adaptation" />
+    </section>
+    <section>
+      <h2>Our Team</h2>
+      <img src="/img/markguerrero.jpg" alt="mark guerrero" />
+      <h3>Mark Guerrero</h3>
+      <p>Product Designer</p>
+      <img src="/img/tomford.jpg" alt="tom ford" />
+      <h3>Tom Ford</h3>
+      <p>Frontend Developer</p>
+      <img src="/img/camilagarcia.jpg" alt="camila garcia" />
+      <h3>Camila Garcia</h3>
+      <p>Marketing</p>
+      <img src="img/danielwilson.jpg" alt="daniel wilson" />
+      <h3>Daniel Wilson</h3>
+      <p>UI Designer</p>
+    </section>
+  </main>
+  <footer>
+    <a href="http://127.0.0.1:5500/index.html" target="_self"
+      ><img src="/img/logo.svg" alt="logo"
+    /></a>
+    <p>
+      Increase the flow of customers and sales for your business with digital
+      marketing & growth solutions.
+    </p>
+  </footer>
 </html>
