--- a/index.html
+++ b/index.html
@@ -5,20 +5,16 @@
     <title>goit-markup-hw-01</title>
     <meta name="description" content="goit-markup-hw-01" />
   </head>
-  <body>
-    <header>
-      <a href="http://127.0.0.1:5500/index.html" target="_self"
-        ><img src="/img/logo.svg" alt="logo"
-      /></a>
-      <a href="" target="_self"><strong>Studio</strong></a>
-      <a href="" target="_self"><strong>Portfolio</strong></a>
-      <a href="" target="_self"><strong>Contacts</strong></a>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
-    </header>
-    <main></main>
-    <footer></footer>
-  </body>
+  <header>
+    <a href="http://127.0.0.1:5500/index.html" target="_self"
+      ><img src="/img/logo.svg" alt="logo"
+    /></a>
+    <a href="" target="_self"><strong>Studio</strong></a>
+    <a href="" target="_self"><strong>Portfolio</strong></a>
+    <a href="" target="_self"><strong>Contacts</strong></a>
+    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+    <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+  </header>
   <main>
     <section>
       <h1>Effective Solutions for Your Business</h1>
@@ -50,7 +46,7 @@
       <h2>What are we doing</h2>
       <img src="/img/img1.jpg" alt="web pages" />
       <img src="/img/img2.jpg" alt="mobile apps" />
-      <img src="/img/img3.jpg" ald="device adaptation" />
+      <img src="/img/img3.jpg" alt="device adaptation" />
     </section>
     <section>
       <h2>Our Team</h2>
