--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <a href="" target="_self"><strong>Portfolio</strong></a>
     <a href="" target="_self"><strong>Contacts</strong></a>
     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-    <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+    <a href="tel:+110001111111>+11 (000) 111-11-11</a>
   </header>
   <main>
     <section>
