--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <a href="" target="_self"><strong>Contacts</strong></a>
     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
     <a href="tel:+110001111111>+11 (000) 111-11-11</a>
-  </header>
-  <main>
+  </header> <body>
     <section>
       <h1>Effective Solutions for Your Business</h1>
       <button type="button">Order Service</button>
@@ -63,7 +62,8 @@
       <h3>Daniel Wilson</h3>
       <p>UI Designer</p>
     </section>
-  </main>
+  </body>
+
   <footer>
     <a href="http://127.0.0.1:5500/index.html" target="_self"
       ><img src="/img/logo.svg" alt="logo"
