--- a/index.html
+++ b/index.html
@@ -5,64 +5,120 @@
     <title>goit-markup-hw-01</title>
     <meta name="description" content="goit-markup-hw-01" />
   </head>
+
   <header>
     <a href="http://127.0.0.1:5500/index.html" target="_self"
       ><img src="/img/logo.svg" alt="logo"
     /></a>
-    <a href="" target="_self"><strong>Studio</strong></a>
-    <a href="" target="_self"><strong>Portfolio</strong></a>
-    <a href="" target="_self"><strong>Contacts</strong></a>
+    <nav>
+      <a href="" target="_self"><strong>Studio</strong></a>
+      <a href="" target="_self"><strong>Portfolio</strong></a>
+      <a href="" target="_self"><strong>Contacts</strong></a>
+    </nav>
     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-    <a href="tel:+110001111111>+11 (000) 111-11-11</a>
-  </header> <body>
+    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+  </header>
+
+  <main>
     <section>
       <h1>Effective Solutions for Your Business</h1>
       <button type="button">Order Service</button>
     </section>
+
     <section>
-      <h3>Strategy</h3>
-      <p>
-        Our goal is to identify the business problem to walk away with the
-        perfect and creative solution.
-      </p>
-      <h3>Punctuality</h3>
-      <p>
-        Bring the key message to the brand's audience for the best price within
-        the shortest possible time.
-      </p>
-      <h3>Diligence</h3>
-      <p>
-        Research and confirm brands that present the strongest digital growth
-        opportunities and minimize risk.
-      </p>
-      <h3>Technologies</h3>
-      <p>
-        Design practice focused on digital experiences. We bring forth a deep
-        passion for problem-solving.
-      </p>
+      <ul>
+        <li>
+          <h3>Strategy</h3>
+          <p>
+            Our goal is to identify the business problem to walk away with the
+            perfect and creative solution.
+          </p>
+        </li>
+        <li>
+          <h3>Punctuality</h3>
+          <p>
+            Bring the key message to the brand's audience for the best price
+            within the shortest possible time.
+          </p>
+        </li>
+        <li>
+          <h3>Diligence</h3>
+          <p>
+            Research and confirm brands that present the strongest digital
+            growth opportunities and minimize risk.
+          </p>
+        </li>
+        <li>
+          <h3>Technologies</h3>
+          <p>
+            Design practice focused on digital experiences. We bring forth a
+            deep passion for problem-solving.
+          </p>
+        </li>
+      </ul>
     </section>
+
     <section>
       <h2>What are we doing</h2>
-      <img src="/img/img1.jpg" alt="web pages" />
-      <img src="/img/img2.jpg" alt="mobile apps" />
-      <img src="/img/img3.jpg" alt="device adaptation" />
+      <ul>
+        <li>
+          <img src="/img/img1.jpg" alt="web pages" width="360" height="300" />
+        </li>
+        <li>
+          <img src="/img/img2.jpg" alt="mobile apps" width="360" height="300" />
+        </li>
+        <li>
+          <img
+            src="/img/img3.jpg"
+            alt="device adaptation"
+            width="360"
+            height="300"
+          />
+        </li>
+      </ul>
     </section>
+
     <section>
       <h2>Our Team</h2>
-      <img src="/img/markguerrero.jpg" alt="mark guerrero" />
-      <h3>Mark Guerrero</h3>
-      <p>Product Designer</p>
-      <img src="/img/tomford.jpg" alt="tom ford" />
-      <h3>Tom Ford</h3>
-      <p>Frontend Developer</p>
-      <img src="/img/camilagarcia.jpg" alt="camila garcia" />
-      <h3>Camila Garcia</h3>
-      <p>Marketing</p>
-      <img src="img/danielwilson.jpg" alt="daniel wilson" />
-      <h3>Daniel Wilson</h3>
-      <p>UI Designer</p>
+      <ul>
+        <li>
+          <img
+            src="/img/markguerrero.jpg"
+            alt="mark guerrero"
+            width="264"
+            height="260"
+          />
+          <h3>Mark Guerrero</h3>
+          <p>Product Designer</p>
+        </li>
+        <li>
+          <img src="/img/tomford.jpg" alt="tom ford" width="264" height="260" />
+          <h3>Tom Ford</h3>
+          <p>Frontend Developer</p>
+        </li>
+        <li>
+          <img
+            src="/img/camillagarcia.jpg"
+            alt="camilla garcia"
+            width="264"
+            height="260"
+          />
+          <h3>Camilla Garcia</h3>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <img
+            src="img/danielwilson.jpg"
+            alt="daniel wilson"
+            width="264"
+            height="260"
+          />
+          <h3>Daniel Wilson</h3>
+          <p>UI Designer</p>
+        </li>
+      </ul>
     </section>
-  </body>
+  </main>
 
   <footer>
     <a href="http://127.0.0.1:5500/index.html" target="_self"
