--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </section>
 
     <section>
+      <h2 class="section-second" hidden>advantages</h2>
       <ul>
         <li>
           <h3>Strategy</h3>
