--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   </head>
 
   <header>
-    <a href="http://127.0.0.1:5500/index.html" target="_self"
-      ><img src="/img/logo.svg" alt="logo"
-    /></a>
+    <a href="/">WebStudio</a>
     <nav>
-      <a href="" target="_self"><strong>Studio</strong></a>
-      <a href="" target="_self"><strong>Portfolio</strong></a>
-      <a href="" target="_self"><strong>Contacts</strong></a>
+      <ul>
+        <li><a href="">Studio</a></li>
+        <li><a href="">Portfolio</a></li>
+        <li><a href="">Contacts</a></li>
+      </ul>
     </nav>
     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
     <a href="tel:+110001111111">+11 (000) 111-11-11</a>
@@ -122,9 +122,7 @@
   </main>
 
   <footer>
-    <a href="http://127.0.0.1:5500/index.html" target="_self"
-      ><img src="/img/logo.svg" alt="logo"
-    /></a>
+    <a href="/">WebStudio</a>
     <p>
       Increase the flow of customers and sales for your business with digital
       marketing & growth solutions.
