--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <header>
-    <a href="/">WebStudio</a>
+    <a href="http://127.0.0.1:5500/index.html">WebStudio</a>
     <nav>
       <ul>
         <li><a href="">Studio</a></li>
@@ -122,7 +122,7 @@
   </main>
 
   <footer>
-    <a href="/">WebStudio</a>
+    <a href="http://127.0.0.1:5500/index.html">WebStudio</a>
     <p>
       Increase the flow of customers and sales for your business with digital
       marketing & growth solutions.
