--- a/index.html
+++ b/index.html
@@ -64,11 +64,16 @@
         <h2>What are we doing</h2>
         <ul>
           <li>
-            <img src="/img/img1.jpg" alt="web pages" width="360" height="300" />
+            <img
+              src="./images/img1.jpg"
+              alt="web pages"
+              width="360"
+              height="300"
+            />
           </li>
           <li>
             <img
-              src="/img/img2.jpg"
+              src="./images/img2.jpg"
               alt="mobile apps"
               width="360"
               height="300"
@@ -76,7 +81,7 @@
           </li>
           <li>
             <img
-              src="/img/img3.jpg"
+              src="./images/img3.jpg"
               alt="device adaptation"
               width="360"
               height="300"
@@ -90,7 +95,7 @@
         <ul>
           <li>
             <img
-              src="/img/markguerrero.jpg"
+              src="./images/markguerrero.jpg"
               alt="mark guerrero"
               width="264"
               height="260"
@@ -100,7 +105,7 @@
           </li>
           <li>
             <img
-              src="/img/tomford.jpg"
+              src="./images/tomford.jpg"
               alt="tom ford"
               width="264"
               height="260"
@@ -110,7 +115,7 @@
           </li>
           <li>
             <img
-              src="/img/camilagarcia.jpg"
+              src="./images/camilagarcia.jpg"
               alt="camilla garcia"
               width="264"
               height="260"
@@ -120,7 +125,7 @@
           </li>
           <li>
             <img
-              src="img/danielwilson.jpg"
+              src="./images/danielwilson.jpg"
               alt="daniel wilson"
               width="264"
               height="260"
