--- a/index.html
+++ b/index.html
@@ -9,15 +9,23 @@
   <body>
     <header>
       <nav>
-        <a href="http://127.0.0.1:5500/index.html">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+      <address>
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
+      </address>
     </header>
 
     <main>
@@ -116,11 +124,11 @@
           <li>
             <img
               src="./images/camilagarcia.jpg"
-              alt="camilla garcia"
+              alt="camila garcia"
               width="264"
               height="260"
             />
-            <h3>Camilla Garcia</h3>
+            <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
@@ -138,7 +146,7 @@
     </main>
 
     <footer>
-      <a href="http://127.0.0.1:5500/index.html">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
