--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </section>
 
       <section>
-        <h2 class="section-second" hidden>advantages</h2>
+        <h2 hidden>Advantages</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
